2004-06-29  Jan Nieuwenhuizen  <janneke@gnu.org>

	* gnome/gw/wnck-spec.scm (<wnck-wrapset>): Fix dependency list.
	(define-module): Add dependency on gdk, fixes wrapset objects.
	(global-declarations-cg): Fix SELF parameter's class.

2004-06-26  Jan Nieuwenhuizen  <janneke@gnu.org>

	* gnome/gw/wnck-spec.scm (<wnck-wrapset>): Add #:dependencies.
	(initialize): Remove depends-on!

2004-06-13  Jan Nieuwenhuizen  <janneke@gnu.org>

	* gnome/gw/Makefile.am: Update.

	* gnome/gw/wnck-spec.scm: New name (WAS: libwnck-spec.scm).

	* New file.
