@@ -1,5 +1,13 @@
-SUBDIRS = 
+include $(top_srcdir)/common.mk
 
-if HAVE_WNCK
+SUBDIRS =
+
+guilemodule_DATA = 
+
+if HAVE_GTKSOURCEVIEW
+guilemodule_DATA += wnck.scm
 SUBDIRS += gw
 endif
+
+EXTRA_DIST = wnck.scm
+DIST_SUBDIRS = gw
