@@ -1,3 +1,14 @@
+2004-09-14  Andy Wingo  <wingo@pobox.com>
+
+	* gnome/gw/wnck-spec.scm: Adopt for new module locations.
+
+	* gnome/gw/Makefile.am (nodist_libgw_guile_gnome_wnck_la_SOURCES):
+	Don't dist generated files.
+
+	* gnome/Makefile.am: Dist fixes.
+
+	* gnome/wnck.scm: New file.
+
 2004-06-29  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* gnome/gw/wnck-spec.scm (<wnck-wrapset>): Fix dependency list.
